baml_language/crates/baml_tests/snapshots/top_level_header_comment/baml_tests__top_level_header_comment__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR ITEMS ===
function Foo() -> int {
    1
}
