baml_language/crates/baml_tests/snapshots/top_level_header_comment/baml_tests__top_level_header_comment__04_5_mir.snap
---
source: target/debug/build/baml_tests-ddc6647912a5d7c4/out/generated_tests.rs
expression: output
---
=== MIR ===
fn Foo() -> Int {
    // Locals:
    let _0: Int // return

    bb0: {
        _0 = const 1_i64;
        goto -> bb1;
    }

    bb1: {
        return;
    }

}
