baml_language/crates/baml_tests/snapshots/top_level_header_comment/baml_tests__top_level_header_comment__04_7_mir2.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 24285
---
=== MIR2 ===
fn user.Foo() -> int {
    // Locals:
    let _0: int // _0 // return

    bb0: {
        _0 = const 1_i64;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}
