baml_language/crates/baml_tests/snapshots/top_level_header_comment/baml_tests__top_level_header_comment__04_tir.snap
---
source: target/debug/build/baml_tests-e89f2b4de47549a5/out/generated_tests.rs
expression: output
---
=== TYPE INFERENCE ===
  Function Foo:
    Return: Literal(Int(1))
